assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');

* {
    margin: 0px;
    padding: 0px;
}

/* Style for the body */
body {
  font-family: 'Arvo', serif;
  background-color: #ffb429;
}

/* Style for the navbar */
nav { 
  background-color: #ffb429;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
}

ul { 
    text-decoration: none;
    list-style-type: none;
}

li {
    display: inline;
}

a {
  color: black;
  padding: 10px;
  text-decoration: none;
  font-size: 1.5rem;
}

/* Style for the hero image */
.hero-image {
  height: 65vh;
  width: 100%;
  background-image: url("../images/pyramids.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  text-align: center;
}

.hero-about {
    height: 65vh;
    width: 100%;
    background-image: url("../images/stars.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
}

.hero-contact {
    height: 65vh;
    width: 100%;
    background-image: url("../images/luxor.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
}

#hero-text {
  padding-top: 20px;
  color: yellow;
}

#about-text {
    padding-top: 20px;
    color: yellow;
  }

#contact-text {
    padding-top: 20px;
    color: yellow;
  }

/* Style for the main element */
main {
  text-align: center;
  padding-top: 5rem;
  background-color: #ffb429;
}

#about {
    padding-bottom: 40px;
    max-width: 100%;
    margin: auto;
}

h1 {
  padding-bottom: 2rem;
}

/* Style for the section */
section {
  max-width: 50%;
  margin: auto;
  text-align: center;
  line-height: 2rem;
}

h2 {
  padding-top: 5rem;
  padding-bottom: 40px;
}

p {
  font-size: 1.5rem;
}

/* Style for the Gallery */
.gallery {
    display: flex;
}

.gallery__img {
    width: 100%;
    height: 60%;
    object-fit: cover;
}

.gallery-text {
    padding: 20px;
}

form {
  font-size: 20px;
}

.myButton {
	box-shadow:inset 0px 1px 3px 0px #91b8b3;
	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
	background-color:#768d87;
	border-radius:5px;
	border:1px solid #566963;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:15px;
	font-weight:bold;
	padding:11px 23px;
	text-decoration:none;
	text-shadow:0px -1px 0px #2b665e;
}
.myButton:hover {
	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
	background-color:#6c7c7c;
}
.myButton:active {
	position:relative;
	top:1px;
}


footer { 
    background-color: #ffb429;
    text-align: center;
    padding-bottom: 40px;
    max-height: 50px;
    position: relative;
    bottom: 0;
}
  
  /* Medium devices (landscape tablets, 768px and up) */
  @media only screen and (max-width: 768px) {
    .hero-image {background-size: cover;}
    .gallery {
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
        width: 80%;
        padding-bottom: 20px;
    }
    footer { 
        width: 100%;
        margin: 0 auto;
    }
  } 
  
  /* Extra large devices (large laptops and desktops, 1200px and up) */
  @media only screen and (max-width: 1200px) {
    .hero-image {background-size: cover;}
    .gallery-text {
        padding: 15px;
        padding-bottom: 30px;
    }

    .main-text {
        width: 90%;
    }
    
    footer { 
        width: 100%;
        margin: 0 auto;
    }
  }

